--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "babel-preset-react-app": "^9.1.2",
     "css-loader": "^3.5.3",
     "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
+    "prettier-webpack-plugin": "^1.2.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
